# robocup-home-education-robotitos

./: CMakeLists.txt  README.md  package.xml
carry_my_luggage/: CMakeLists.txt  package.xml
carry_my_luggage/carry_my_luggage_xml/: carry_my_luggage.xml  carry_my_luggage1.xml  carry_my_luggage2.xml
carry_my_luggage/include/carry_my_luggage/: BTNavAction.h  CMLDialog.h  DetectBag.h  DetectObject.h  DetectPerson.h  DialogInterface.h  FollowPerson.h  GotoArena.h  GotoDoor.h  GotoPerson.h  GotoReferee.h  ListenStop.h  PID.h  carry_my_luggage_dialog.h  rate_controller.h  transforms.h
carry_my_luggage/inlcude/carry_my_luggage/: DetectBag.h  FollowPerson.h
carry_my_luggage/launch/: carry_my_luggage.launch
carry_my_luggage/navigation/maps/: map_clase.pgm  map_clase1.pgm  map_clase_1.yaml  map_clase_2.yaml  map_def.pgm  map_def.yaml  map_final.pgm  map_final.yaml  map_finalE.pgm  map_pasillo.yaml  map_prueba.pgm  map_prueba.yaml
carry_my_luggage/param/: clase_pos.yaml
carry_my_luggage/src/: carry_my_luggage_node.cpp
carry_my_luggage/src/carry_my_luggage/: CMLDialog.cpp  DetectBag.cpp  DetectObject.cpp  DetectPerson.cpp  DialogInterface.cpp  FollowPerson.cpp  GotoArena.cpp  GotoPerson.cpp  GotoReferee.cpp  ListenStop.cpp  PID.cpp  carry_my_luggage_dialog.cpp  rate_controller.cpp  transforms.cpp
dialog_conf/: df_arq_soft.json
find_my_mates/: CMakeLists.txt  package.xml
find_my_mates/find_my_mates_xml/: find_my_mates.xml  find_my_mates1.xml  find_my_mates2.xml
find_my_mates/include/: DetectPerson.h  transforms.h
find_my_mates/include/find_my_mates/: BTNavAction.h  DetectPerson.h  GetDescriptions.h  GotoArena.h  GotoPerson.h  GotoReferee.h
find_my_mates/param/: clase_pos.yaml
find_my_mates/src/: find_my_mates_node.cpp
find_my_mates/src/find_my_mates/: DetectPerson.cpp  GetDescriptions.cpp  GotoArena.cpp  GotoPerson.cpp  GotoReferee.cpp  transforms.cpp
navigation/maps/: map_clase.yaml  map_clase_1.pgm
src/: carry_my_luggage_node.cpp
